# sn-netplay-serv

./: .dockerignore  .env.example  .envrc.example  .gitignore  .project-storage.toml  Cargo.toml  Dockerfile  NETPLAY_DESKTOP_PLAN.md  NETPLAY_ENGINEERING_RULES.md  NETPLAY_RESEARCH_NOTES.md  NETPLAY_SERVER_PLAN.md  NETPLAY_SERVER_POLISH_NOTES.md  README.md  coolify.env.example  docker-compose.coolify.yml
.github/workflows/: publish-amd64-image.yml  publish-relay-image.yml
.obsiian/: project.md
analytics/clickhouse/: schema.sql
deploy/: coolify.md  ghcr.md
deploy/systemd/: sb-netplay-serv.service
docs/: lobby-player-removal-contract.md  mgba-link-provider-foundation.md  netplay-retroarch-parity-implementation-plan.md  protocol-mvp.md  retroarch-netplay-architecture.md  retroarch-shadowboy-parity-gap-analysis.md  storage-protocol.md
protocol/link-cable-v1/: gb-serial-abort.hex  gb-serial-commit.hex  gb-serial-reply.hex  gb-serial-start-slot0.hex  gb-serial-start-slot1.hex  gba-mode-set.hex  gba-transfer-abort.hex  gba-transfer-commit.hex  gba-transfer-reply.hex  gba-transfer-start.hex  manifest.json
protocol/link-cable-v2/: README.md  gba-finish-ack.hex  gba-mode-ack.hex  gba-mode-set.hex  gba-transfer-abort.hex  gba-transfer-commit.hex  gba-transfer-reply.hex  gba-transfer-start.hex  manifest.json
scripts/: build-ghcr-image.sh  clean-deep  clean-soft  ensure-project-storage.sh  netplay-analytics.sh  project-storage-env.sh  push-ghcr-image.sh  rust-target-prune  rust-target-report  space-report  with-project-env.sh
sdk/: SDK_PLAN.md
sdk/kotlin/: ANDROID_DUAL_CHANNEL_HANDOFF.md  ANDROID_HOST_CLIENT_KIND_GATE_HANDOFF.md  ANDROID_OPTIONAL_VOICE_HANDOFF.md  README.md  (+4 more)
src/: config.rs  lib.rs  limits.rs  main.rs
tests/: coolify_compose_contract.rs  netplay_controller_protocol_goldens.rs  netplay_link_protocol_goldens.rs  netplay_link_protocol_smoke.rs  netplay_protocol_smoke.rs  netplay_runner_handoff.rs  netplay_v5_protocol_smoke.rs
(+308 files in other folders)
